--- a/signlog.html
+++ b/signlog.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SignUp/Login Page</title>
     <link rel="stylesheet" href="signlog.css">
+    <link rel="shortcut icon" href="favicon-32x32.png">
     <script src="https://kit.fontawesome.com/2da03c4b01.js" crossorigin="anonymous"></script>
 </head>
 <body>
