--- a/ecomm.html
+++ b/ecomm.html
@@ -87,7 +87,7 @@
             </div>
             
             <div class="thirft">
-                <img src="normal_pics/thrift.jpg" width="200px" height="500px" style="border-radius: 20px;">
+                <img src="normal_pics/thrift.jpg" width="200px" height="500px" style="border-radius: 20px 50px 70px;">
                 <p>Styles for Women</p>
             </div>
         </div>
